Add sorting options for views and days published in price filter; enhance scraper card with image carousel and display of views and days published

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
     <h1>Filtro de precios</h1>
     <app-price-filter ngSkipHydration (filterChange)="applyFilter($event)"></app-price-filter>
     <div class="card-grid">
-      <app-scraper-card *ngFor="let item of filteredData" [data]="item"></app-scraper-card>
+      <app-scraper-card *ngFor="let item of displayedCards; trackBy: trackByIndex" [data]="item">
+      </app-scraper-card>
     </div>
+
   </div>
 
   <div *ngIf="filteredData.length === 0" class="no-results">
