--- a/src/app/scraper-card/scraper-card.component.scss
+++ b/src/app/scraper-card/scraper-card.component.scss
@@ -4,14 +4,14 @@
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
   max-width: 350px;
   margin: 15px;
+  height: 100%;
 
   &:hover {
-    transform: translateY(-5px);
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
   }
 
@@ -83,6 +83,7 @@
     flex: 1;
 
     .card-title {
+      margin-top: 10px;
       font-size: 1.5rem;
       font-weight: bold;
       color: #2c3e50;
@@ -98,8 +99,8 @@
     .card-details {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 20px;
-
+      margin-bottom: 5px;
+      flex-direction: column;
       p {
         display: flex;
         align-items: center;
@@ -110,6 +111,16 @@
           margin-right: 8px;
           color: #2980b9;
         }
+      }
+    }
+    .card-views {
+      display: flex;
+      margin-bottom: 15px;
+
+      p {
+        color: grey;
+        font-size: 0.8rem;
+        margin: 0;
       }
     }
 
@@ -138,4 +149,77 @@
   @media (max-width: 768px) {
     max-width: 100%;
   }
+}
+
+.carousel-image {
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-image img {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.3s ease-in-out;
+}
+
+img.slide-left {
+  animation: slide-left 0.3s forwards;
+}
+
+img.slide-right {
+  animation: slide-right 0.3s forwards;
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-right {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 100%;
+}
+
+button.prev-btn,
+button.next-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+button.prev-btn {
+  left: 10px;
+}
+
+button.next-btn {
+  right: 10px;
 }
