--- a/src/app/scraper-card/scraper-card.component.scss
+++ b/src/app/scraper-card/scraper-card.component.scss
@@ -50,11 +50,12 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255, 255, 255, 0.5);
       padding: 8px;
       border-radius: 50%;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      border: none;
 
       &:hover {
         background-color: rgba(255, 255, 255, 1);
