--- a/src/app/scraper-card/scraper-card.component.html
+++ b/src/app/scraper-card/scraper-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" [class.popup-animation]="data.animate">
   <div class="card-image">
     <div class="carousel-container">
       <button class="prev-btn" (click)="prevImage()" aria-label="Imagen anterior">
@@ -15,16 +15,14 @@
     </div>
 
     <div class="card-badge">
-      <span>{{data.daysPublished}}</span>
+      <span>{{ data.daysPublished }}</span>
     </div>
 
     <button class="card-favorite" *ngIf="imageLoaded" (click)="toggleFavorite()" (keydown.enter)="toggleFavorite()"
       [attr.aria-label]="isFavorited ? 'Quitar de favoritos' : 'Añadir a favoritos'">
       <i [ngClass]="isFavorited ? 'fas fa-heart' : 'far fa-heart'" aria-hidden="true"
-        [attr.title]="isFavorited ? 'Quitar de favoritos' : 'Añadir a favoritos'">
-      </i>
+        [attr.title]="isFavorited ? 'Quitar de favoritos' : 'Añadir a favoritos'"></i>
     </button>
-
   </div>
 
   <div class="card-body">
@@ -35,7 +33,7 @@
       <p><i class="fas fa-map-marker-alt"></i> {{ data.location }}</p>
     </div>
     <div class="card-views">
-      <p><i class="fas fa-eye"></i> {{data.views}}</p>
+      <p><i class="fas fa-eye"></i> {{ data.views }}</p>
     </div>
     <a [href]="data.href" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ver Propiedad</a>
   </div>
