--- a/src/app/scraper-card/scraper-card.component.scss
+++ b/src/app/scraper-card/scraper-card.component.scss
@@ -4,12 +4,12 @@
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
   max-width: 350px;
   margin: 15px;
   height: 100%;
+  transition: box-shadow 0.3s ease, transform 0.3s, opacity 0.3s;
 
   &:hover {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
@@ -223,4 +223,23 @@ button.prev-btn {
 
 button.next-btn {
   right: 10px;
+}
+
+@keyframes popup {
+  0% {
+    transform: scale(0.9);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.popup-animation {
+  animation: popup 0.6s ease-in-out;
 }
